[package]
name = "ask-cli"
version = "0.1.0"
authors = ["Chiwa <chiwuabox@gmail.com>"]
edition = "2021"

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
config = "0.14.0"
directories = "5.0.1"
dotenv = "0.15.0"
reqwest = { version = "0.12", features = ["json"] }
serde = "1.0.204"
serde_derive = "1.0.204"
serde_json = "1.0.120"
termimad = "0.29.4"
tokio = { version = "1", features = ["full"] }
