[package]
name = "ask-cli"
version = "0.1.0"
authors = ["Chiwa <chiwuabox@gmail.com>"]
description = "A simple command line tool to use Google Gemini AI"
edition = "2021"
repository = "https://github.com/gg0074x/ask-cli"
license = "MIT"
publish = false

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
config = "0.14.0"
directories = "5.0.1"
reqwest = { version = "0.12", features = ["json"] }
serde = "1.0.204"
serde_json = "1.0.120"
termimad = "0.29.4"
tokio = { version = "1", features = ["full"] }
