[package]
name = "ask-cli"
version = "0.1.0"
authors = ["Chiwa <chiwuabox@gmail.com>"]
description = "A simple command line tool to use Google Gemini AI"
edition = "2021"
repository = "https://github.com/gg0074x/ask-cli"
license = "MIT"
publish = false

[[bin]]
name = "ask"
path = "./src/main.rs"

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
config = "0.14.0"
directories = "5.0.1"
reqwest = { version = "0.12", features = ["json"] }
serde = "1.0.204"
serde_json = "1.0.120"
termimad = "0.29.4"
tokio = { version = "1", features = ["full"] }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# Whether to consider the binaries in a package for distribution (defaults true)
dist = true
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.19.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = false
